--- a/src/index.css
+++ b/src/index.css
@@ -58,7 +58,7 @@ th.agenda__cell.--controls button {
   padding-top:10px;
 }
 
-table {
+.agenda__table table {
   border-bottom:1px solid #199ED8!important;
   border-right:1px solid #199ED8!important;
 }
@@ -97,7 +97,6 @@ table {
   color:#348AD8;
 }
 
-
 .btn-add-shift {
   width:20px;
   height:20px;
@@ -107,4 +106,33 @@ table {
   border-radius:100px;
   padding:4px;
   font-size:10px;
+}
+
+.agendCtrls-label-inline label {
+  display:none;
+}
+
+.agendCtrls-label-wrapper {
+  position:relative;
+}
+
+.agendCtrls-label-wrapper:after  {
+  top:-20px;
+  position:absolute;
+  font-size:12px;
+  color:#666;
+  content: "Employee Name";
+}
+
+::-webkit-input-placeholder { /* WebKit browsers */
+  color: transparent;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+  color: transparent;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color: transparent;
+}
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+  color: transparent;
 }
